--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     - id: check-toml
     - id: check-added-large-files
 -   repo: https://github.com/psf/black
-    rev: 22.10.0
+    rev: 22.12.0
     hooks:
     - id: black
 -   repo: https://github.com/pre-commit/mirrors-isort
@@ -20,3 +20,4 @@ repos:
     rev: v0.991
     hooks:
     -   id: mypy
+        additional_dependencies: [types-requests]
